hphp/test/zend/good/ext/intl/tests/calendar_setTimeZone_basic.php.skipif
<?php
if (!extension_loaded('intl'))
	die('skip intl extension not enabled');
if (version_compare(INTL_ICU_VERSION, '4.8') < 0)
	die('skip for ICU 4.8+');